@@ -973,7 +973,7 @@ class Collections:
                     item.update(fanarttv_art)
                     meta.update(item)
 
-            if (self.list[i]['poster'] == '0' or self.list[i]['fanart'] == '0') and self.disable_fanarttv == 'true':
+            if (self.list[i]['poster'] == '0' or self.list[i]['fanart'] == '0') or (self.disable_fanarttv == 'true' and tmdb != '0'):
                 try:
                     from resources.lib.indexers.tmdb import Movies
                     tmdb_art = Movies().tmdb_art(tmdb)
