@@ -1,3 +1,7 @@
+[B][COLOR red]Update - v3.0.5 - July 13, 2019[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed fanart.tv for some IMDb lists broken in update that
+added "Disable Extended artwork" option.[/I]
+
 [B][COLOR red]Update - v3.0.4 - July 09, 2019[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Fixed poster art in source select list.[/I]
 [COLOR yellow]--[/COLOR][I] Watched indicator improvements.  Still it seems Kodi has
